crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@dos__german-dates.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/dos/german-dates.txt
---
format: dos
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: Ordner
    kind: dir
    size: ~
    modified: "2024-01-31T12:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: Bericht.docx
    kind: file
    size: 2048
    modified: "2024-01-31T08:15:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: Grüße.txt
    kind: file
    size: 1
    modified: "2024-02-01T23:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: Schaltjahr
    kind: dir
    size: ~
    modified: "2024-02-29T00:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: kurz.txt
    kind: file
    size: 99
    modified: "2024-06-15T10:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
